--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "url": "https://github.com/ryu323/gradebook/issues"
   },
   "homepage": "https://github.com/ryu323/gradebook#readme",
-  "dependencies": {},
+  "dependencies": {
+    "angular": "^1.5.5",
+    "angular-ui-router": "^0.3.0"
+  },
   "devDependencies": {
     "babel-register": "^6.9.0",
     "express": "^4.13.4"
