--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "angular-ui-router": "^0.3.0",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "moment": "^2.13.0",
     "mongoose": "^4.4.19"
   }
 }
